# stroids

./: Cargo.toml  TODO.md
res/: rocket.blend  rover.blend
shaders/: gen.comp  shader.frag  shader.vert
src/: app.rs  asteroid.rs  buffer.rs  main.rs  marching_cubes.rs  octree.rs  physics.rs  player.rs  production.rs  region.rs  rtree.rs  system.rs  texture.rs  vulkan.rs  vulkan_instance.rs
src/vulkan/: vulkan_allocator.rs  vulkan_instance.rs  vulkan_pipeline.rs  vulkan_surface.rs  vulkan_swapchain.rs
