[package]
name = "stroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.35.1"
winit = "0.26.0"
vk-shader-macros = "0.2.7"
nalgebra = "0.30.1"
obj-rs = "0.7.0"
image = "0.23.14"
rand = "0.8.4"

[profile.dev.package.image] # Optimize dependencies in debug mode
opt-level = 3
